# jb_triangle

./: CMakeLists.txt  README.md
src/: MyGLEW.cpp  MyGLEW.h  Program.cpp  Program.h  Vbo.cpp  Vbo.h  Vec.cpp  Vec.h  XWindow.cpp  XWindow.h  main.cpp
